--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vtex/react-csv-parse": "^3.0.2",
+    "csv-parse": "^3.1.3",
+    "d3": "^5.7.0",
+    "fast-csv": "^2.4.1",
+    "fs": "0.0.1-security",
+    "fs-es6": "0.0.2",
+    "highcharts": "^6.1.4",
+    "papaparse": "^4.6.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-highcharts": "^16.0.2",
     "react-scripts": "2.0.5"
   },
   "scripts": {
